light-rideshare-k8s/platform/ingress/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rideshare-ingress
  namespace: rideshare-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - teleiosdupsy.space
        - www.teleiosdupsy.space
      secretName: rideshare-tls
  rules:
    - host: teleiosdupsy.space
      http:
        paths:
          - path: /api/v1/riders
            pathType: Prefix
            backend:
              service:
                name: rider-service
                port:
                  number: 3001
          - path: /api/v1/drivers
            pathType: Prefix
            backend:
              service:
                name: driver-service
                port:
                  number: 3003
          - path: /api/v1/trips
            pathType: Prefix
            backend:
              service:
                name: trip-service
                port:
                  number: 3005
          - path: /api/v1/matching
            pathType: Prefix
            backend:
              service:
                name: matching-service
                port:
                  number: 3004
          - path: /api/v1/email
            pathType: Prefix
            backend:
              service:
                name: email-service
                port:
                  number: 3002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000

    - host: www.teleiosdupsy.space
      http:
        paths:
          - path: /api/v1/riders
            pathType: Prefix
            backend:
              service:
                name: rider-service
                port:
                  number: 3001
          - path: /api/v1/drivers
            pathType: Prefix
            backend:
              service:
                name: driver-service
                port:
                  number: 3003
          - path: /api/v1/trips
            pathType: Prefix
            backend:
              service:
                name: trip-service
                port:
                  number: 3005
          - path: /api/v1/matching
            pathType: Prefix
            backend:
              service:
                name: matching-service
                port:
                  number: 3004
          - path: /api/v1/email
            pathType: Prefix
            backend:
              service:
                name: email-service
                port:
                  number: 3002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
